Fix heading font color in dark mode

--- a/app/assets/stylesheets/forms_dark.scss
+++ b/app/assets/stylesheets/forms_dark.scss
@@ -242,7 +242,7 @@ form {
   padding: 10px;
   border-radius: 3px;
   h1, h2, h3, h4, h5, h6 {
-    color: black;
+    color: #fff;
   }
   img {
     max-width: 750px;
