--- a/app/assets/stylesheets/my_theme_dark.scss
+++ b/app/assets/stylesheets/my_theme_dark.scss
@@ -101,7 +101,7 @@ p {
   #blog-body {
     font-size: 15px;
     h1, h2, h3, h4, h5, h6 {
-      color: black !important;
+      color: #fff !important;
     }
     iframe {
       max-width: 720px;
